projects: add contact

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,9 +2,11 @@
 import Layout from "../../layouts/Layout.astro";
 import Breadcrumb from "../../components/Breadcrumb.astro";
 import Hero from "./Hero.astro";
+import Contact from "../../components/Contact.astro";
 ---
 
 <Layout title="Projets">
   <Breadcrumb />
   <Hero />
+  <Contact />
 </Layout>
