--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,12 +1,14 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import Breadcrumb from "../../components/Breadcrumb.astro";
-import Hero from "./Hero.astro";
 import Contact from "../../components/Contact.astro";
+import AllProjects from "./AllProjects/index.astro";
+import Hero from "./Hero.astro";
 ---
 
 <Layout title="Projets">
   <Breadcrumb />
   <Hero />
+  <AllProjects />
   <Contact />
 </Layout>
