--- a/src/pages/homepage/Testimonials/index.astro
+++ b/src/pages/homepage/Testimonials/index.astro
@@ -2,6 +2,7 @@
 import Grid from "../../../components/@common/Grid.astro";
 import data from "../../../data/homepage/temoignages.yaml";
 import CallToAction from "../../../components/@common/CallToAction.astro";
+import Testimonial from "../../../components/Testimonial.astro";
 ---
 
 <section class="container">
@@ -10,20 +11,8 @@ import CallToAction from "../../../components/@common/CallToAction.astro";
     {
       data.testimonials.map((testimonial) => {
         return (
-          <li class=" xl:col-span-4 flex flex-col p-[50px] bg-neutral4 rounded-[26px]">
-            <p
-              lang={testimonial.contentLang}
-              class="text-body-medium mt-[50px] mb-auto"
-            >
-              <span class="block mb-[50px] text-primary text-[240px] translate-x-[-15px] translate-y-[20px]">
-                &ldquo;
-              </span>
-              {testimonial.content}&rdquo;
-            </p>
-            <p class="mt-5 text-body-medium-bold">
-              {testimonial.author}
-              <span class="text-primary">&nbsp;{testimonial.company}</span>
-            </p>
+          <li class="xl:col-span-4">
+            <Testimonial testimonial={testimonial} />
           </li>
         );
       })
@@ -35,3 +24,9 @@ import CallToAction from "../../../components/@common/CallToAction.astro";
     </CallToAction>
   </div>
 </section>
+
+<style>
+  li :global(.testimonial) {
+    height: 100%;
+  }
+</style>
