--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import Grid from "./@common/Grid.astro";
-import Link from "./@common/Link.astro";
+import CallToAction from "./@common/CallToAction.astro";
 
 interface Props {
   class?: string;
@@ -12,35 +12,57 @@ const { class: cssClasses } = Astro.props;
 <footer class:list={["container", "mb-[70px]", cssClasses]}>
   <Grid as="nav">
     <div class="xl:col-start-2 xl:col-span-2">
-      <Link
+      <CallToAction
         href="https://www.linkedin.com/company/team-ux/"
         target="_blank"
         rightIcon="open_in_new"
+        type="primary"
+        variant="transparent"
       >
         Team UX sur LinkedIn
-      </Link>
+      </CallToAction>
     </div>
     <div class="xl:col-span-2">
       <ul class="flex flex-col gap-4">
         <li>
-          <Link href="/plan-du-site" type="secondary">Plan du site</Link>
+          <CallToAction
+            href="/plan-du-site"
+            type="secondary"
+            variant="transparent"
+          >
+            Plan du site
+          </CallToAction>
         </li>
         <li>
-          <Link href="/mentions-legales" type="secondary">
+          <CallToAction
+            href="/mentions-legales"
+            type="secondary"
+            variant="transparent"
+          >
             Mentions légales
-          </Link>
+          </CallToAction>
         </li>
       </ul>
     </div>
     <div class="xl:col-span-2">
       <ul class="flex flex-col gap-4">
         <li>
-          <Link href="/glossaire-ux" type="secondary">Glossaire UX</Link>
+          <CallToAction
+            href="/glossaire-ux"
+            type="secondary"
+            variant="transparent"
+          >
+            Glossaire UX
+          </CallToAction>
         </li>
         <li>
-          <Link href="/demarche-eco-conception" type="secondary">
+          <CallToAction
+            href="/demarche-eco-conception"
+            type="secondary"
+            variant="transparent"
+          >
             Démarche d’éco-conception
-          </Link>
+          </CallToAction>
         </li>
       </ul>
     </div>
