--- a/src/pages/projects/AllProjects/LargeProject/index.astro
+++ b/src/pages/projects/AllProjects/LargeProject/index.astro
@@ -46,6 +46,7 @@ const { project } = Astro.props;
           })
         }
       </ul>
+      <button class="w-fit">Afficher la galerie de ce projet</button>
     </div>
     <div class="col-span-7 flex flex-col gap-5 p-10 bg-surface5 rounded-[20px]">
       <h3 class="text-headline-large">{project.description.title}</h3>
