--- a/src/pages/projects/AllProjects/LargeProject/index.astro
+++ b/src/pages/projects/AllProjects/LargeProject/index.astro
@@ -1,7 +1,7 @@
 ---
-import Grid from "../../../../components/@common/Grid.astro";
 import CallToAction from "../../../../components/@common/CallToAction.astro";
 import Testimonial from "../../../../components/Testimonial.astro";
+import Icon from "../../../../components/@common/Icon.astro";
 
 interface Props {
   title: string;
@@ -22,56 +22,79 @@ interface Props {
 const { project } = Astro.props;
 ---
 
-<div class="xl:p-10 bg-neutral4 rounded-[26px]">
-  <Grid>
-    <div class="col-span-5 flex flex-col gap-10">
-      <div>
-        <p class="mb-2.5 text-headline-medium-bold">
-          {project.title}
-        </p>
-        <p class="text-body-large text-neutral1">
-          {project.activity}
+<div class="project flex gap-8 p-10 bg-neutral4 rounded-[26px]">
+  <div class="flex flex-col gap-10 xl:flex-[0_0_40%]">
+    <div>
+      <p class="mb-2.5 text-headline-medium-bold">
+        {project.title}
+      </p>
+      <p class="text-body-large text-neutral1">
+        {project.activity}
+      </p>
+    </div>
+    <ul class="flex flex-wrap gap-2.5">
+      {
+        project.skills.map((skill) => {
+          return (
+            <li>
+              <span class="inline-block px-3 py-1.5 text-label-small bg-surface1 rounded-lg">
+                {skill}
+              </span>
+            </li>
+          );
+        })
+      }
+    </ul>
+
+    <div class="show-project-gallery">
+      <CallToAction type="primary" variant="transparent" rightIcon="visibility">
+        Afficher la galerie de ce projet
+      </CallToAction>
+    </div>
+
+    <div class="gallery flex flex-col gap-5 hidden">
+      <ul class="flex gap-5">
+        <li>
+          <div class="w-[140px] h-[140px] bg-neutral3 rounded-[6px]"></div>
+        </li>
+        <li>
+          <div class="w-[140px] h-[140px] bg-neutral3 rounded-[6px]"></div>
+        </li>
+        <li>
+          <div class="w-[140px] h-[140px] bg-neutral3 rounded-[6px]"></div>
+        </li>
+      </ul>
+      <div class="flex gap-2.5">
+        <span role="presentation">
+          <Icon name="photo_prints" width="24px" height="24px" /></span
+        >
+        <p class="text-neutral1 text-body-small">
+          Dans une démarche d’éco-responsabilité, nous vous proposons de
+          n’ouvrir<br />que les galeries et visuels dont vous avez besoin.
         </p>
       </div>
-      <ul class="flex flex-wrap gap-2.5">
-        {
-          project.skills.map((skill) => {
-            return (
-              <li>
-                <span class="inline-block px-3 py-1.5 text-label-small bg-surface1 rounded-lg">
-                  {skill}
-                </span>
-              </li>
-            );
-          })
-        }
-      </ul>
-      <button class="w-fit">Afficher la galerie de ce projet</button>
     </div>
-    <div class="col-span-7 flex flex-col gap-5 p-10 bg-surface5 rounded-[20px]">
-      <h3 class="text-headline-large">{project.description.title}</h3>
-      <p class="text-body-medium">
-        {project.description.content}
-      </p>
+  </div>
+  <div class="flex flex-col gap-5 p-10 bg-surface5 rounded-[20px]">
+    <h3 class="text-headline-large">{project.description.title}</h3>
+    <p class="text-body-medium">
+      {project.description.content}
+    </p>
 
-      {
-        project.testimonial && (
-          <details>
-            <CallToAction type="secondary" as="summary" rightIcon="expand_more">
-              Déplier le témoignage
-            </CallToAction>
+    {
+      project.testimonial && (
+        <details>
+          <CallToAction type="secondary" as="summary" rightIcon="expand_more">
+            Déplier le témoignage
+          </CallToAction>
 
-            <div class="mt-5">
-              <Testimonial
-                viewMode="inline"
-                testimonial={project.testimonial}
-              />
-            </div>
-          </details>
-        )
-      }
-    </div>
-  </Grid>
+          <div class="mt-5">
+            <Testimonial viewMode="inline" testimonial={project.testimonial} />
+          </div>
+        </details>
+      )
+    }
+  </div>
 </div>
 
 <style>
@@ -85,3 +108,31 @@ const { project } = Astro.props;
     }
   }
 </style>
+
+<script>
+  const projects = document.querySelectorAll(".project");
+
+  projects.forEach((project) => {
+    const buttonShowGallery = project.querySelector(".show-project-gallery");
+    const gallery = project.querySelector(".gallery");
+
+    if (!buttonShowGallery) {
+      return;
+    }
+
+    function onUserClicksOnShowGalleryButton() {
+      buttonShowGallery.classList.add("hidden");
+      gallery.classList.remove("hidden");
+
+      buttonShowGallery.removeEventListener(
+        "click",
+        onUserClicksOnShowGalleryButton,
+      );
+    }
+
+    buttonShowGallery.addEventListener(
+      "click",
+      onUserClicksOnShowGalleryButton,
+    );
+  });
+</script>
