--- a/src/components/@common/TagSkill.astro
+++ b/src/components/@common/TagSkill.astro
@@ -6,6 +6,14 @@ interface Props {
 const { name } = Astro.props;
 ---
 
-<span class="inline-block px-3 py-1.5 text-label-small bg-surface1 rounded-lg">
+<span
+  class="inline-block px-3 py-1.5 text-label-small text-neutral1 bg-surface1 rounded-lg"
+>
   {name}
 </span>
+
+<style>
+  span {
+    white-space: nowrap;
+  }
+</style>
