projects: contact bg form offset

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -10,5 +10,5 @@ import Hero from "./Hero.astro";
   <Breadcrumb />
   <Hero />
   <AllProjects />
-  <Contact />
+  <Contact class="xl:mt-[-100px]" />
 </Layout>
