--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -4,6 +4,7 @@ import Breadcrumb from "../../components/Breadcrumb.astro";
 import Contact from "../../components/Contact.astro";
 import AllProjects from "./AllProjects/index.astro";
 import Hero from "./Hero.astro";
+import Footer from "../../components/Footer.astro";
 ---
 
 <Layout title="Projets">
@@ -11,4 +12,5 @@ import Hero from "./Hero.astro";
   <Hero />
   <AllProjects />
   <Contact class="xl:mt-[-100px]" />
+  <Footer />
 </Layout>
