fix(build): src/pages doesnt accept non-page subcomponents

--- a/src/components/homepage/DerriereTeamUX/index.astro
+++ b/src/components/homepage/DerriereTeamUX/index.astro
@@ -1,11 +1,11 @@
 ---
-import Brush from "../../../components/@common/Brush.astro";
-import Image from "../../../components/@common/Image.astro";
-import Grid from "../../../components/@common/Grid.astro";
-import data from "../../../data/homepage/derriere-team-ux.yaml";
-import Icon from "../../../components/@common/Icon.astro";
+import Brush from "../../@common/Brush.astro";
+import Image from "../../@common/Image.astro";
+import Grid from "../../@common/Grid.astro";
+import Icon from "../../@common/Icon.astro";
+import CallToAction from "../../@common/CallToAction.astro";
 import DuoDeChoc from "../../../components/DuoDeChoc.astro";
-import CallToAction from "../../../components/@common/CallToAction.astro";
+import data from "../../../data/homepage/derriere-team-ux.yaml";
 
 const { block1, block2 } = data;
 ---
