--- a/src/components/homepage/ProjectsTeasing/index.astro
+++ b/src/components/homepage/ProjectsTeasing/index.astro
@@ -1,9 +1,9 @@
 ---
-import Grid from "../../../components/@common/Grid.astro";
-import Brush from "../../../components/@common/Brush.astro";
+import Grid from "../../@common/Grid.astro";
+import Brush from "../../@common/Brush.astro";
+import CallToAction from "../../@common/CallToAction.astro";
 import data from "../../../data/homepage/projects-teasing.yaml";
-import CallToAction from "../../../components/@common/CallToAction.astro";
-import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
+import BackgroundForm1 from "../../BackgroundForm1.astro";
 import Teasing from "./Teasing.astro";
 
 const {
