--- a/src/components/homepage/Expertises/index.astro
+++ b/src/components/homepage/Expertises/index.astro
@@ -1,6 +1,6 @@
 ---
-import Grid from "../../../components/@common/Grid.astro";
-import Brush from "../../../components/@common/Brush.astro";
+import Grid from "../../@common/Grid.astro";
+import Brush from "../../@common/Brush.astro";
 import Expertise from "./Expertise.astro";
 import data from "../../../data/homepage/expertises.yaml";
 ---
