--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,8 +2,8 @@
 import Layout from "../../layouts/Layout.astro";
 import Breadcrumb from "../../components/Breadcrumb.astro";
 import Contact from "../../components/Contact.astro";
-import AllProjects from "./AllProjects/index.astro";
-import Hero from "./Hero.astro";
+import AllProjects from "../../components/projects/AllProjects/index.astro";
+import Hero from "../../components/projects/Hero.astro";
 import Footer from "../../components/Footer.astro";
 ---
 
