chore: specific base path for github pages

--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -24,9 +24,15 @@ const {
   class: cssClasses,
 } = Astro.props;
 
+// Specific hack for Github Pages
+const formattedHref =
+  href?.startsWith("/") && process.env.GITHUB_ACTION
+    ? `/team-ux.com${href}`
+    : href ?? undefined;
+
 const HTMLTag = as ? as : href ? "a" : "button";
 const htmlAttributes = {
-  href: href ?? undefined,
+  href: formattedHref,
   "class:list": [
     cssClasses,
     "call-to-action",
