--- a/src/components/Header/components/NavItem.astro
+++ b/src/components/Header/components/NavItem.astro
@@ -11,7 +11,11 @@ if ("submenu" in Astro.slots) {
   ariaExpandedAttribute = "false";
 } else if (to !== pathname) {
   HTMLTag = "a";
-  hrefAttribute = to;
+  // Specific hack for Github Pages
+  hrefAttribute =
+    to?.startsWith("/") && process.env.GITHUB_ACTION
+      ? `/team-ux.com${to}`
+      : to ?? undefined;
 }
 
 const selected = pathname === to;
