fix: dont use slot

--- a/src/components/nos-deux-profils/Profiles.astro
+++ b/src/components/nos-deux-profils/Profiles.astro
@@ -20,7 +20,7 @@ import Brush from "../@common/Brush.astro";
             id="1"
             class="absolute z-[-1] w-[142px] left-0 bottom-0 rotate-[180deg]"
           />
-          <Yuna slot="picture" width="89" height="220" />
+          <Yuna width="89" height="220" />
         </div>
       </Profile>
     </div>
