--- a/src/components/pages/notre-manifeste/Hero.astro
+++ b/src/components/pages/notre-manifeste/Hero.astro
@@ -8,6 +8,7 @@ import data from "../../../data/notre-manifeste/hero.yaml";
     showBackgroundForm={false}
     title={data.title}
     subtitle={data.content}
+    class="xl:mb-[-97px]"
   />
 </div>
 
