--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -5,12 +5,18 @@ import Contact from "../../components/Contact.astro";
 import Footer from "../../components/Footer.astro";
 import Hero from "../../components/pages/notre-manifeste/Hero.astro";
 import Introduction from "../../components/pages/notre-manifeste/Introduction.astro";
+import Convictions from "../../components/pages/notre-manifeste/Convictions.astro";
+import Actions from "../../components/pages/notre-manifeste/Actions.astro";
+import Signature from "../../components/pages/notre-manifeste/Signature.astro";
 ---
 
 <Layout title="Notre manifeste">
   <Breadcrumb />
   <Hero />
   <Introduction />
+  <Convictions />
+  <Actions />
+  <Signature />
   <Contact class="xl:mt-[-100px]" />
   <Footer />
 </Layout>
