--- a/src/components/@common/Image.astro
+++ b/src/components/@common/Image.astro
@@ -7,8 +7,8 @@ type WebPSrc = string;
 interface Props extends HTMLAttributes<"img"> {
   srcSet: [AvifSrc, WebPSrc, PNGSrc];
   alt: string;
-  width?: `${number}px`;
-  height?: `${number}px`;
+  width?: number;
+  height?: number;
 }
 
 const { srcSet, ...props } = Astro.props;
