--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,6 @@ import Footer from "../components/Footer.astro";
   <DerriereTeamUX />
   <ProjectsTeasing />
   <Testimonials />
-  <Contact class="mt-[-100px]" />
+  <Contact />
   <Footer />
 </Layout>
