--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -13,6 +13,6 @@ import ItsAMatch from "../../components/nos-deux-profils/ItsAMatch.astro";
   <Hero />
   <Profiles />
   <ItsAMatch />
-  <Contact class="xl:mt-[-100px]" />
+  <Contact />
   <Footer />
 </Layout>
