--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -17,6 +17,6 @@ import Signature from "../../components/pages/notre-manifeste/Signature.astro";
   <Convictions />
   <Actions />
   <Signature />
-  <Contact class="xl:mt-[-100px]" />
+  <Contact />
   <Footer />
 </Layout>
