--- a/src/pages/temoignages/index.astro
+++ b/src/pages/temoignages/index.astro
@@ -11,6 +11,6 @@ import Layout from "../../layouts/Layout.astro";
   <Breadcrumb />
   <Hero />
   <Testimonials />
-  <Contact class="xl:mt-[-100px]" />
+  <Contact />
   <Footer />
 </Layout>
