--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -7,6 +7,6 @@ import Footer from "../../components/Footer.astro";
 
 <Layout title="Projets">
   <Breadcrumb />
-  <Contact />
+  <Contact showBackgroundForm={false} />
   <Footer />
 </Layout>
