feat: css classes for xl

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -18,7 +18,7 @@ const backgroundFormCSSClasses = showBackgroundForm
 <section class:list={[backgroundFormCSSClasses, cssClasses]}>
   <div id="contact" class="container">
     <Grid>
-      <div class="xl:col-start-2 col-span-8">
+      <div class="xl:col-start-2 xl:col-span-8">
         <div class="relative p-14 bg-surface3 rounded-[26px]">
           {
             showBackgroundForm && (
