--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -1,12 +1,14 @@
 ---
+export interface Testimonial {
+  content: string;
+  company: string;
+  author: string;
+  contentLang?: string;
+}
+
 interface Props {
   viewMode: "block" | "inline";
-  testimonial: {
-    content: string;
-    company: string;
-    author: string;
-    contentLang?: string;
-  };
+  testimonial: Testimonial;
 }
 
 const { viewMode = "block", testimonial } = Astro.props;
