testimonial: better html tags

--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -16,7 +16,7 @@ const { viewMode = "block", testimonial } = Astro.props;
 
 {
   viewMode === "block" && (
-    <div class="testimonial flex flex-col p-[50px] bg-neutral4 rounded-[26px]">
+    <bloquote class="testimonial flex flex-col p-[50px] bg-neutral4 rounded-[26px]">
       <p
         lang={testimonial.contentLang ?? undefined}
         class="text-body-medium mt-[50px] mb-auto"
@@ -26,17 +26,19 @@ const { viewMode = "block", testimonial } = Astro.props;
         </span>
         {testimonial.content}&rdquo;
       </p>
-      <p class="mt-5 text-body-medium-bold">
+      <footer class="mt-5 text-body-medium-bold">
         {testimonial.author}
-        <span class="text-primary">&nbsp;{testimonial.company}</span>
-      </p>
-    </div>
+        <cite>
+          <span class="text-primary">&nbsp;{testimonial.company}</span>
+        </cite>
+      </footer>
+    </bloquote>
   )
 }
 
 {
   viewMode === "inline" && (
-    <div class="testimonial flex gap-6 p-10 bg-neutral4 rounded-[26px]">
+    <bloquote class="testimonial flex gap-6 p-10 bg-neutral4 rounded-[26px]">
       <div class="flex-[0_0_76px] h-[54px] overflow-hidden">
         <span class="block text-primary text-[238px] translate-x-[-14px] translate-y-[-95px]">
           &ldquo;
@@ -46,11 +48,13 @@ const { viewMode = "block", testimonial } = Astro.props;
         <p lang={testimonial.contentLang ?? undefined} class="text-body-medium">
           {testimonial.content}&rdquo;
         </p>
-        <p class="text-body-medium-bold">
+        <footer class="text-body-medium-bold">
           {testimonial.author}
-          <span class="text-primary">&nbsp;{testimonial.company}</span>
-        </p>
+          <cite>
+            <span class="text-primary">&nbsp;{testimonial.company}</span>
+          </cite>
+        </footer>
       </div>
-    </div>
+    </bloquote>
   )
 }
