pages: plan du site

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -4,7 +4,7 @@ import Icon from "./@common/Icon.astro";
 const { pathname } = Astro.url;
 
 const urlPageTitles = new Map([
-  ["/projects", "Projets"],
+  ["/projets", "Projets"],
   ["/nos-deux-profils", "Nos deux profils"],
   ["/notre-manifeste", "Notre manifeste"],
   ["/temoignages", "Témoignages"],
