--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -16,7 +16,7 @@ import NavItem from "./components/NavItem.astro";
             <NavItem to="/">Accueil</NavItem>
           </li>
           <li>
-            <NavItem to="/projects">Projets</NavItem>
+            <NavItem to="/projets">Projets</NavItem>
           </li>
           <li>
             <NavItemTeamUX />
