--- a/src/components/homepage/Hero.astro
+++ b/src/components/homepage/Hero.astro
@@ -28,7 +28,7 @@ import DuoDeChoc from "../DuoDeChoc.astro";
           Nous livrons un design accessible et le plus sobre possible.
         </p>
 
-        <CallToAction href="/projects" rightIcon="forward">
+        <CallToAction href="/projets" rightIcon="forward">
           Découvrir nos projets
         </CallToAction>
       </div>
