--- a/src/components/homepage/ProjectsTeasing/index.astro
+++ b/src/components/homepage/ProjectsTeasing/index.astro
@@ -44,7 +44,7 @@ const {
       </li>
     </Grid>
     <div class="flex">
-      <CallToAction href="/projects" class="mx-auto" rightIcon="forward">
+      <CallToAction href="/projets" class="mx-auto" rightIcon="forward">
         {data.callToAction.label}
       </CallToAction>
     </div>
