--- a/src/components/CommonPageHero.astro
+++ b/src/components/CommonPageHero.astro
@@ -38,13 +38,17 @@ const backgroundFormCSSClasses = showBackgroundForm
         <BackgroundForm1 class="absolute z-[-1] top-[-125px] right-[-540px] rotate-[-31deg]" />
       )
     }
-    <Grid>
-      <h1 class="xl:col-start-2 xl:col-span-full mb-6 text-display-medium">
+    <Grid class="gap-y-6">
+      <h1 class="xl:col-start-2 xl:col-span-full text-display-medium">
         {title}
       </h1>
-      <h2 class="xl:col-start-2 xl:col-span-6 text-body-extra-large">
-        {subtitle}
-      </h2>
+      {
+        subtitle && (
+          <h2 class="xl:col-start-2 xl:col-span-6 text-body-extra-large">
+            {subtitle}
+          </h2>
+        )
+      }
     </Grid>
   </div>
 </section>
