--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -3,6 +3,7 @@ import Logo from "./Logo.astro";
 import NavItemContact from "./NavItemContact.astro";
 import NavItemTeamUX from "./NavItemTeamUX.astro";
 import NavItem from "./components/NavItem.astro";
+import NavItems from "./NavItems.astro";
 ---
 
 <header class="container">
@@ -16,10 +17,22 @@ import NavItem from "./components/NavItem.astro";
             <NavItem to="/">Accueil</NavItem>
           </li>
           <li>
-            <NavItem to="/projets">Projets</NavItem>
+            <NavItems
+              title="Références"
+              items={[
+                { title: "Nos projets", pathname: "/projets" },
+                { title: "Témoignages", pathname: "/temoignages" },
+              ]}
+            />
           </li>
           <li>
-            <NavItemTeamUX />
+            <NavItems
+              title="Team UX"
+              items={[
+                { title: "Nos deux profils", pathname: "/nos-deux-profils" },
+                { title: "Notre manifeste", pathname: "/notre-manifeste" },
+              ]}
+            />
           </li>
           <li>
             <NavItemContact />
